Changes for coming 2.3.7 release:

Brief summary :

+ More optimizations in CPU code - Bochs 2.3.7 is more than 2x faster
  than Bochs 2.3.5 build !
- Implemented LBA48 support in BIOS
- Added memory access tracing for Bochs internal debugger
- Many fixes in CPU emulation and internal debugger
  - MenuetOS64 floppy images booting perfect again !
- updated LGPL'd VGABIOS to version 0.6b

Detailed change log :

- CPU
  - Support of XSAVE/XRSTOR CPU extensions, to enable configure with
        --enable-xsave option
  - Fixed Bochs failure on RISC host machines with BxRepeatSpeedups
    optimization enabled
  - Implemented SYSENTER/SYSEXIT instructions in long mode
  - More than 100 bugfixes in CPU emulation correctness (both x86 and x86-64)
    - MenuetOS64 floppy images booting perfect again !
  - Updated CPU instrumentation callbacks

- Bochs Internal Debugger and Disassembler
  - Added memory access tracing for Bochs internal debugger, enable
    by typing 'trace-mem on' in debugger command line
  - Many bug fixes in Bochs internal debugger and disassembler

- System BIOS (Volker)
  - Implemented LBA48 support
  - Added generation of SSDT ACPI table that contains definitions
    for available processors
  - Added RTC device to ACPI DSDT table
  - Added implementation of SMBIOS

- I/O devices (Volker)
  - VGA
    - Implemented screen disable bit in sequencer register #1
    - Implemented text mode cursor blinking
  - Serial
    - new serial modes 'pipe-server' and 'pipe-client' for win32
    - new serial mode 'socket-server'

- Configure and compile
  - Fixed configure bug with enabling of POPCNT instruction, POPCNT
    instruction should be enabled by default when SSE4.2 is enabled.
  - Removed --enable-magic-breakpoint configure option. The option is
    automatically enabled  if Bochs internal debugger is compiled in.
    It is still possible to turn on/off the feature through .bochsrc.
  - Allow boot from network option in .bochsrc